# dll_wrapper_prototype

./: BaseModel.cpp  CMakeLists.txt  DllModel.cpp  README.md  ThreatSystemA.cpp  ThreatSystemB.cpp  main.cpp
include/: BaseModel.hpp  DataTypes.hpp  DllModel.hpp  ThreatSystemA.hpp  ThreatSystemB.hpp
